--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<h1>Clientes</h1>
-<div *ngFor="let cliente of dataClient">
-  <h3>Nombre</h3><span>{{cliente.nombre}}</span>
-  <h3>dpi</h3><span>{{cliente.dpi}}</span>
-  <h3>correo</h3><span>{{cliente.correo}}</span>
-  <h3>telefono</h3><span>{{cliente.telefono}}</span>
-</div>
+<router-outlet></router-outlet>
