--- a/src/app/clients/index/index.component.html
+++ b/src/app/clients/index/index.component.html
@@ -1,23 +1,27 @@
 <div class="container">
-    <h1>Angular 13 CRUD Example</h1>
+    <h1>Clientes</h1>
    
-    <a href="#" routerLink="/product/create/" class="btn btn-success">Agregar Cliente</a>
+    <a href="#" routerLink="/clients/create/" class="btn btn-success">Agregar Cliente</a>
      
     <table class="table table-bordered">
       <tr>
         <th>ID</th>
         <th>Nombre</th>
         <th>dpi</th>
+        <th>correo</th>
+        <th>telefono</th>
         <th width="220px">Opciones</th>
       </tr>
-      <tr *ngFor="let cliente of clients">
-        <td>{{ cliente.id_cliente}}</td>
-        <td>{{ cliente.nombre }}</td>
-        <td>{{ cliente.dpi }}</td>
+      <tr *ngFor="let client of clientes">
+        <td>{{ client.id_cliente}}</td>
+        <td>{{ client.nombre }}</td>
+        <td>{{ client.dpi }}</td>
+        <td>{{ client.correo }}</td>
+        <td>{{ client.telefono }}</td>
         <td>
-          <button type="button" (click)="viewClient(cliente.id_cliente)" class="btn btn-primary">Ver</button>
-          <button type="button" (click)="editClient(cliente.id_cliente)" class="btn btn-info">Editar</button>
-          <button type="button" (click)="deleteClient(cliente.id_cliente)" class="btn btn-danger">Borrar</button>
+          <button type="button" (click)="viewClient(client.id_cliente)" class="btn btn-primary">Ver</button>
+          <button type="button" (click)="editClient(client.id_cliente)" class="btn btn-info">Editar</button>
+          <button type="button" (click)="deleteClient(client.id_cliente)" class="btn btn-danger">Borrar</button>
         </td>
       </tr>
     </table>
