--- a/src/app/clients/create/create.component.html
+++ b/src/app/clients/create/create.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Agregar producto</h1>
+    <h1>Agregar nuevo Cliente</h1>
    
     <a href="#" routerLink="/product/index" class="btn btn-primary">Regresar</a>
          
