--- a/src/app/clients/create/create.component.html
+++ b/src/app/clients/create/create.component.html
@@ -25,7 +25,7 @@
                 type="text"
                 class="form-control">
             <div *ngIf="f['dpi'].touched && f['dpi'].invalid" class="alert alert-danger">
-                <div *ngIf="f['dpi'].errors && f['dpi'].errors['required']">El nombre es obligatorio.</div>
+                <div *ngIf="f['dpi'].errors && f['dpi'].errors['required']">El código de identificación es obligatorio.</div>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
                 type="email"
                 class="form-control">
             <div *ngIf="f['correo'].touched && f['correo'].invalid" class="alert alert-danger">
-                <div *ngIf="f['correo'].errors && f['correo'].errors['required']">El codigo es obligatorio.</div>
+                <div *ngIf="f['correo'].errors && f['correo'].errors['required']">El correo es obligatorio.</div>
             </div>
         </div>
    
@@ -49,7 +49,7 @@
                 type="text"
                 class="form-control"/>            
             <div *ngIf="f['telefono'].touched && f['telefono'].invalid" class="alert alert-danger">
-                <div *ngIf="f['telefono'].errors && f['telefono'].errors['required']">El precio es obligatorio.</div>
+                <div *ngIf="f['telefono'].errors && f['telefono'].errors['required']">El telefono es obligatorio.</div>
             </div>
         </div>
    
